--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,62 +1,109 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@font-face {
+    font-family: Fredoka;
+    src: url(./FredokaOne-Regular.ttf);
 }
 
-body {
-    height: 100vh;
-    background-color: #f4c531;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.wrapper {
-    background-color: aliceblue;
-    width: 400px;
-    height: 400px;
-    border-radius: 16px;
-    padding: 12px
-}
-.cards { 
-    display: flex;
-    flex-wrap: wrap;
+html {
     width: 100%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
-    /* perspective: 100000px; */
+    background: linear-gradient(325deg,  #6f00fc 0%,#fc7900 50%,#fcc700 100%);
+    font-family: Fredoka;
 }
-.card-container {
-    height: calc(100%/4 - 10px);
-    width: calc(100%/4 - 10px);
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.game{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+}
+.start-button{
+    background: #282A3A;
+    color: #fff;
     cursor: pointer;
-    margin: 5px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
+    padding: 10px 20px;
+    border: 0;
+    cursor: pointer;
+    font-family: Fredoka;
+    font-size: 18pt;
+}
+
+.disabled{
+    color:#757575
+}
+.board-container{
     position: relative;
 }
-.card{
-    position: absolute;
+.board,
+.win {
+    border-radius: 5px;
+    box-shadow: 0 25px 50px rgb(33 33 33 / 25%);
+    background: linear-gradient(135deg,  #6f00fc 0%,#fc7900 50%,#fcc700 100%);
+    transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
     backface-visibility: hidden;
-    font-size: xx-large;
 }
-.flip{
-    transform: rotateY(180deg)
+.board-container.flipped .board{
+    transform: rotateY(180deg);
+}
+.board-container.flipped .win{
+    transform: rotateY(0);
+}
+.board{
+    display: grid;
+    padding:20px;
+    grid-gap: 20px;
+    position:absolute;
+}
+.controls {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.card{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+}
+.card-front,
+.card-back {
+    position: absolute;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    background: #282A3A;
+    transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
+    perspective: 100px;
+    backface-visibility: hidden;
 }
 
-.card.front-card{
-
+.card-back{
+    text-align: center;
+    line-height: 100px;
+    background: #FDF8E6;
+    font-size: 40px;
+    transform: rotateY(180deg);
+    /* text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000; */
 }
 
-.card.back-card{
-    transform: rotateY(180deg)
-    
+.card.flipped .card-back{
+    transform: rotateY(0);
+}
+
+.card.flipped .card-front{
+    transform: rotateY(0);
+}
+.win{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    line-height: 100%;
+    font-size: 21pt;
+    color: #282A3A;
+    transform: rotateY(180deg);
 }
